# bitproto

./: Cargo.toml  README.md  clear_torrents.sh  restart_transmission.sh  t_setup.sh
examples/: simple.rs
misc/: install_transmission.sh  mon_finished_transmission.sh  setup_transmission.sh
src/: main.rs  utils.rs
